--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-header-nav>
-  <h1>Hello World</h1>
-</app-header-nav>
+<ng-header-nav>
+  <router-outlet>
+  </router-outlet>
+</ng-header-nav>
