--- a/src/app/header-nav/header-nav.component.scss
+++ b/src/app/header-nav/header-nav.component.scss
@@ -18,7 +18,11 @@
 
 .main-content {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+  padding: 5em;
+  * {
+    width: 80%;
+  }
 }
