--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
   <mat-divider inset></mat-divider>
   <mat-card-actions>
     <button  mat-raised-button (click)="redirRegister()">Register</button>
-    <button mat-raised-button color="primary" (click)="validateUserData()" [disabled]="userDataForm.invalid">Sing in</button>
+    <button mat-raised-button color="primary" (click)="validateUserData()" [disabled]="userDataForm.invalid">Sign in</button>
   </mat-card-actions>
   <mat-card-footer>
     <mat-progress-bar *ngIf="displayLoading" mode="indeterminate"></mat-progress-bar>
